--- a/website/styles.css
+++ b/website/styles.css
@@ -113,7 +113,7 @@ body {
   }
   
   .right {
-    tex-align: right;
+    text-align: right;
     width: 39%;    
   }
   
@@ -130,10 +130,6 @@ body {
   a:hover {
     text-decoration: underline;
     color: #000;
-  }
-  
-  .skills {
-    
   }
     
   .skills__item {
